# todo-backend-cppcms

./: CMakeLists.txt  README.md
config/: config.js  fastcgi.conf  lighttpd.conf
cpp_src/: main.cpp  todoitem.cpp  todoitem.h  todos.cpp  todos.h
